Ensures that the portal messages is not too close to the title

--- a/izug/seantis/dir/events/css/directory.css
+++ b/izug/seantis/dir/events/css/directory.css
@@ -1,5 +1,9 @@
 /* izug.seantis.dir.events directory css */
 
+.portalMessage {
+    margin-bottom: 12px !important;   
+}
+
 /* start */
 
 #directorySearch {
